# 5e-to-Daggerheart-Stat-block-converter

./: .gitignore  LICENSE  README.md  converter.py  pyproject.toml
converter/: __main__.py  convert.py  models.py
converter/mappings/: 5e_to_dh.yml
converter/parsers/: __init__.py  fiveetools_json.py
converter/render/templates/: adversary.md.j2
examples/5e/: goblin_5etools.json
tests/: test_converter.py  test_smoke.py
